# deepviewcore

./: .gitignore  README.md  pyproject.toml
deepviewcore/: Video.py  shell.py  test.py
deepviewcore/filters/: __init__.py  denoise.py  skip_dark.py  threshold.py  to_gray.py  top_hat.py
deepviewcore/process/: __init__.py  detect_objects.py  preprocess_frame.py  process_frame.py
deepviewcore/process/filters/: top_hat.py
deepviewcore/tests/: detect_contours.py  detect_events_testing.py  skip_dark.py  test.py
src/: Video.py  shell.py
src/process/: detect_objects.py
