[tool.poetry]
name = "deepviewcore"
version = "0.1.0"
description = ""
authors = ["Miguel Martín <alu0101209777@ull.edu.es>"]
packages = [
  { include = "deepviewcore" },
]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "*"
numpy = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


